fixed css gap for login modal

--- a/frontend/src/components/Modals/FormStyles.scss
+++ b/frontend/src/components/Modals/FormStyles.scss
@@ -19,7 +19,7 @@
 .login__error__message {
   color: red;
   line-height: 15px;
-  margin: 10px 0px;
+  margin-top: 10px;
   font-size: 12px;
 }
 
@@ -32,6 +32,7 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
+  margin-top: 25px;
 }
 
 .field {
